[package]
name = "immeta"
version = "0.5.0"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "An image metadata parsing library"
license = "MIT"
repository = "https://github.com/netvl/immeta"
documentation = "http://netvl.github.io/immeta/"
readme = "Readme.md"
keywords = ["image", "metadata"]

[dependencies]
byteorder = "1.3"
num-traits = "0.2"
arrayvec = "0.5"
